--- a/src/app/styles/sprites/png-sprite.scss
+++ b/src/app/styles/sprites/png-sprite.scss
@@ -1,26 +1,30 @@
-$icon-advantage-1: 989px 454px -989px -454px 26px 29px 1029px 915px 'sprite.png';
-$icon-advantage-3: 989px 483px -989px -483px 23px 30px 1029px 915px 'sprite.png';
-$icon-advantage-4: 989px 423px -989px -423px 26px 31px 1029px 915px 'sprite.png';
-$icon-andvantage-2: 989px 392px -989px -392px 29px 31px 1029px 915px 'sprite.png';
-$icon-arrow-mobile: 895px 575px -895px -575px 24px 11px 1029px 915px 'sprite.png';
-$icon-cat-desktop: 140px 721px -140px -721px 70px 97px 1029px 915px 'sprite.png';
-$icon-cat-mobile: 989px 305px -989px -305px 35px 49px 1029px 915px 'sprite.png';
-$icon-cat-tablet: 0px 721px 0px -721px 140px 194px 1029px 915px 'sprite.png';
-$icon-fb: 1018px 392px -1018px -392px 10px 19px 1029px 915px 'sprite.png';
-$icon-index-background-mobile: 709px 0px -709px 0px 320px 305px 1029px 915px 'sprite.png';
-$icon-index-can-mobile: 709px 305px -709px -305px 280px 270px 1029px 915px 'sprite.png';
-$icon-index-can-tablet: 0px 0px 0px 0px 709px 609px 1029px 915px 'sprite.png';
-$icon-insta: 1012px 483px -1012px -483px 16px 16px 1029px 915px 'sprite.png';
-$icon-logo-desktop: 268px 609px -268px -609px 202px 59px 1029px 915px 'sprite.png';
-$icon-logo-mobile-header: 776px 575px -776px -575px 101px 18px 1029px 915px 'sprite.png';
-$icon-logo-mobile: 989px 354px -989px -354px 33px 38px 1029px 915px 'sprite.png';
-$icon-logo-tablet: 470px 609px -470px -609px 173px 58px 1029px 915px 'sprite.png';
-$icon-m-close: 877px 575px -877px -575px 18px 18px 1029px 915px 'sprite.png';
-$icon-mobile-menu: 989px 552px -989px -552px 24px 18px 1029px 915px 'sprite.png';
-$icon-t-fb: 1015px 423px -1015px -423px 14px 28px 1029px 915px 'sprite.png';
-$icon-t-insta: 989px 513px -989px -513px 23px 23px 1029px 915px 'sprite.png';
-$icon-t-vk: 989px 536px -989px -536px 30px 16px 1029px 915px 'sprite.png';
-$icon-tiger-desktop: 643px 609px -643px -609px 134px 56px 1029px 915px 'sprite.png';
-$icon-tiger-mobile: 709px 575px -709px -575px 67px 28px 1029px 915px 'sprite.png';
-$icon-tiger-tablet: 0px 609px 0px -609px 268px 112px 1029px 915px 'sprite.png';
-$icon-vk: 777px 609px -777px -609px 22px 12px 1029px 915px 'sprite.png';
+$icon-1: 1142px 230px -1142px -230px 71px 228px 1256px 949px 'sprite.png';
+$icon-2: 1142px 0px -1142px 0px 114px 230px 1256px 949px 'sprite.png';
+$icon-3: 1029px 0px -1029px 0px 113px 233px 1256px 949px 'sprite.png';
+$icon-4: 0px 721px 0px -721px 121px 228px 1256px 949px 'sprite.png';
+$icon-advantage-1: 1213px 379px -1213px -379px 26px 29px 1256px 949px 'sprite.png';
+$icon-advantage-3: 1213px 408px -1213px -408px 23px 30px 1256px 949px 'sprite.png';
+$icon-advantage-4: 1213px 348px -1213px -348px 26px 31px 1256px 949px 'sprite.png';
+$icon-andvantage-2: 1213px 317px -1213px -317px 29px 31px 1256px 949px 'sprite.png';
+$icon-arrow-mobile: 1212px 499px -1212px -499px 24px 11px 1256px 949px 'sprite.png';
+$icon-cat-desktop: 1142px 458px -1142px -458px 70px 97px 1256px 949px 'sprite.png';
+$icon-cat-mobile: 1213px 230px -1213px -230px 35px 49px 1256px 949px 'sprite.png';
+$icon-cat-tablet: 121px 721px -121px -721px 140px 194px 1256px 949px 'sprite.png';
+$icon-fb: 1246px 279px -1246px -279px 10px 19px 1256px 949px 'sprite.png';
+$icon-index-background-mobile: 709px 0px -709px 0px 320px 305px 1256px 949px 'sprite.png';
+$icon-index-can-mobile: 709px 305px -709px -305px 280px 270px 1256px 949px 'sprite.png';
+$icon-index-can-tablet: 0px 0px 0px 0px 709px 609px 1256px 949px 'sprite.png';
+$icon-insta: 1239px 348px -1239px -348px 16px 16px 1256px 949px 'sprite.png';
+$icon-logo-desktop: 268px 609px -268px -609px 202px 59px 1256px 949px 'sprite.png';
+$icon-logo-mobile-header: 1142px 583px -1142px -583px 101px 18px 1256px 949px 'sprite.png';
+$icon-logo-mobile: 1213px 279px -1213px -279px 33px 38px 1256px 949px 'sprite.png';
+$icon-logo-tablet: 470px 609px -470px -609px 173px 58px 1256px 949px 'sprite.png';
+$icon-m-close: 1236px 408px -1236px -408px 18px 18px 1256px 949px 'sprite.png';
+$icon-mobile-menu: 1212px 481px -1212px -481px 24px 18px 1256px 949px 'sprite.png';
+$icon-t-fb: 1242px 317px -1242px -317px 14px 28px 1256px 949px 'sprite.png';
+$icon-t-insta: 1212px 458px -1212px -458px 23px 23px 1256px 949px 'sprite.png';
+$icon-t-vk: 1213px 438px -1213px -438px 30px 16px 1256px 949px 'sprite.png';
+$icon-tiger-desktop: 643px 609px -643px -609px 134px 56px 1256px 949px 'sprite.png';
+$icon-tiger-mobile: 1142px 555px -1142px -555px 67px 28px 1256px 949px 'sprite.png';
+$icon-tiger-tablet: 0px 609px 0px -609px 268px 112px 1256px 949px 'sprite.png';
+$icon-vk: 1212px 510px -1212px -510px 22px 12px 1256px 949px 'sprite.png';
